不知道从哪下手的redux

--- a/src/views/layout/component/styles/footer.scss
+++ b/src/views/layout/component/styles/footer.scss
@@ -23,6 +23,15 @@ footer {
                     width: 27px;
                     height: 27px;
                 }
+                .show{
+                    position:absolute;
+                    display: block;
+                }
+                .hide{
+                    
+                    display:none;
+                }
+                
             }
 
             &.active {
